feat: Add Google OAuth2 placeholders to .env.example

--- a/teyvatVN/backend_server/.env.example
+++ b/teyvatVN/backend_server/.env.example
@@ -3,3 +3,5 @@
 # API_ENDPOINT=us-east5-aiplatform.googleapis.com
 # GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json
 GEMINI_API_KEY=
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
