--- a/teyvatVN/backend_server/.env.example
+++ b/teyvatVN/backend_server/.env.example
@@ -5,3 +5,4 @@
 GEMINI_API_KEY=
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+SECRET_KEY=your_super_secret_key_for_jwt
