--- a/teyvatVN/backend_server/.env.example
+++ b/teyvatVN/backend_server/.env.example
@@ -1,8 +1,11 @@
-# PROJECT_ID=primeval-span-452802-i9
-# LOCATION=us-east5
-# API_ENDPOINT=us-east5-aiplatform.googleapis.com
-# GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account-key.json
-GEMINI_API_KEY=
+# Google OAuth Configuration
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 SECRET_KEY=your_super_secret_key_for_jwt
+
+# Gemini API Configuration
+GEMINI_API_KEY=your_gemini_api_key
+
+# Application URLs
+FRONTEND_URL=http://localhost:6001
+BACKEND_URL=http://localhost:6002
