--- a/teyvatVN/backend/.env.example
+++ b/teyvatVN/backend/.env.example
@@ -5,7 +5,14 @@ SECRET_KEY=your_super_secret_key_for_jwt
 
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key
+GEMINI_MODEL_NAME=gemini-2.5-flash
 
 # Application URLs
 FRONTEND_URL=http://localhost:6001
 BACKEND_URL=http://localhost:6002
+
+# Database
+DATABASE_URL=sqlite:///./sql_app.db
+
+# Security
+ALLOWED_ORIGINS=http://localhost:6001,https://your-tunnel-url.trycloudflare.com
